Added two new commands to sort by contract time in scheduler - dayview

--- a/Teleopti.Ccc.UserTexts/Resources.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.resx
@@ -10529,4 +10529,10 @@ These options are activated:
   <data name="ViewHistory" xml:space="preserve">
     <value>View History</value>
   </data>
+  <data name="ContractTimeAsc" xml:space="preserve">
+    <value>Contract time ascending</value>
+  </data>
+  <data name="ContractTimeDesc" xml:space="preserve">
+    <value>Contract time descending</value>
+  </data>
 </root>
