--- a/Win/Scheduling/SchedulingSessionPreferences/SchedulingSessionPreferencesDialog.resx
+++ b/Win/Scheduling/SchedulingSessionPreferences/SchedulingSessionPreferencesDialog.resx
@@ -125,7 +125,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABO
-        CQAAAk1TRnQBSQFMAgEBAgEAAQwBAAEMAQABEAEAARABAAT/ARkBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        CQAAAk1TRnQBSQFMAgEBAgEAARQBAAEUAQABEAEAARABAAT/ARkBAAj/AUIBTQE2BwABNgMAASgDAAFA
         AwABEAMAAQEBAAEYBgABDN4AAe4B8AH5AbUBvAHmAV8BbQHJASMBNwG0ASEBNwGxAVkBawHDAa4BtgHg
         AewB7gH3GAAB6QH5Ae8BmwHkAbUBTAHRAX4BKAHHAWIBKAHFAWABSAHPAXkBjwHgAawB4wH3Aep1AAHP
         AdQB8AFFAVcBxAEdATgBxgEwAVQB3AFHAXwB8gFVAZkB+gFLAY4B6gE1AWwBzwFCAVwBuQHGAcsB5xIA
@@ -167,4 +167,7 @@
         BAABgAEBAYABAQQAAcABAwHAAQMEAAHgAQcB4AEHBAAB8AEPAfABDwQABP8EAAs=
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>54</value>
+  </metadata>
 </root>
