--- a/Teleopti.Ccc.UserTexts/Resources.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.resx
@@ -10535,4 +10535,10 @@ These options are activated:
   <data name="ContractTimeDesc" xml:space="preserve">
     <value>Contract time descending</value>
   </data>
+  <data name="IncludeTroubleshootingInformation" xml:space="preserve">
+    <value>Include troubleshooting information</value>
+  </data>
+  <data name="NoOfAgentDaysCouldNotBeScheduled" xml:space="preserve">
+    <value>{0} agent days could not be scheduled.</value>
+  </data>
 </root>
