--- a/Teleopti.Ccc.UserTexts/Resources.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.resx
@@ -10535,4 +10535,32 @@ These options are activated:
   <data name="ContractTimeDesc" xml:space="preserve">
     <value>Contract time descending</value>
   </data>
+  <data name="Import" xml:space="preserve">
+    <value>Import</value>
+    <comment>Import</comment>
+  </data>
+  <data name="ImportFileNameColon" xml:space="preserve">
+    <value>Import file name:</value>
+    <comment>Import file name</comment>
+  </data>
+  <data name="ImportStaffing" xml:space="preserve">
+    <value>Import Staffing</value>
+    <comment>Import Staffing</comment>
+  </data>
+  <data name="ImportWorkload" xml:space="preserve">
+    <value>Import Workload</value>
+    <comment>Import Workload</comment>
+  </data>
+  <data name="ImportWorkloadAndStaffing" xml:space="preserve">
+    <value>Import Workload and Staffing</value>
+    <comment>Import Workload and Staffing</comment>
+  </data>
+  <data name="SkillNameColon" xml:space="preserve">
+    <value>Skill name:</value>
+    <comment>Skill name</comment>
+  </data>
+  <data name="WorkloadNameColon" xml:space="preserve">
+    <value>Workload name:</value>
+    <comment>Workload name</comment>
+  </data>
 </root>
