add a test for ad hoc stuff.

--- a/Teleopti.Ccc.UserTexts/Resources.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.resx
@@ -10571,4 +10571,7 @@ These options are activated:
     <value>Import Forecast</value>
     <comment>Import Forecast</comment>
   </data>
+  <data name="JobHistoryView" xml:space="preserve">
+    <value>View Job History</value>
+  </data>
 </root>
