--- a/Teleopti.Ccc.UserTexts/Resources.sv.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.sv.resx
@@ -10255,4 +10255,7 @@ Licensen heter "{3}" och har dessa tillval aktiverade:
   <data name="NoOfAgentDaysCouldNotBeScheduled" xml:space="preserve">
     <value>{0} agentdagar kunde inte schemaläggas.</value>
   </data>
+  <data name="ExportToPDFShiftsPerDay" xml:space="preserve">
+    <value>Exportera till PDF skift per dag</value>
+  </data>
 </root>
